--- a/src/app/(frontend)/globals.css
+++ b/src/app/(frontend)/globals.css
@@ -88,11 +88,27 @@
   * {
     @apply border-border;
   }
+
   body {
-    @apply bg-background text-foreground min-h-[100vh] flex flex-col;
+    @apply bg-[#F7FBFA] text-foreground min-h-[100vh] flex flex-col;
+    font-family: var(--font-inter);
+  }
+
+  h1,
+  h2 {
+    font-family: var(--font-saans);
   }
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
+/* iOS Safari bounce control (works for many cases) */
+body {
+  -webkit-overflow-scrolling: auto;
+}
 html {
   opacity: 0;
 }
@@ -100,4 +116,31 @@ html {
 html[data-theme='dark'],
 html[data-theme='light'] {
   opacity: initial;
+}
+
+@layer utilities {
+  /* underline grows L->R on hover, and collapses L->R when leaving */
+  .u-underline {
+    position: relative;
+    display: inline-block;
+    text-decoration: none;
+  }
+
+  .u-underline::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -3px; /* adjust underline distance */
+    width: 100%;
+    height: 1px; /* thickness */
+    background: currentColor;
+
+    transform: scaleX(0);
+    transform-origin: left; /* important: collapse from left too */
+    transition: transform 220ms ease;
+  }
+
+  .u-underline:hover::after {
+    transform: scaleX(1);
+  }
 }
